<resources>
    <string name="app_name">Mine</string>
    
    <string name="login_email">请输入邮箱账号</string>
    <string name="login_pwd">请输入密码</string>
    <string name="forget_the_password">忘记密码</string>
    <string name="application_for_admission">申请入驻</string>
    <string name="login_but">登录</string>

    <string name="regis_perfect">完善信息</string>
    <string name="regis_onsuccess">审核通过即可成功入驻</string>
    <string name="regis_email">您的邮箱账号</string>
    <string name="regis_verification_code">请输入验证码</string>
    <string name="regis_get_code">获取验证码</string>
    <string name="regis_pwd">请输入密码</string>
    <string name="regis_repeat_pwd">请再次输入密码</string>
    <string name="next_step">下一步</string>

    <string name="help_audit">填写正确有助于快速通过审核</string>
    <string name="regis_name">您的真实姓名</string>
    <string name="regis_hospital">您所在医院</string>
    <string name="regis_department">您所在科室</string>
    <string name="regis_title">您的职称</string>

    <string name="regis_resume">您的个人简历</string>
    <string name="resume">个人简历啊giao!!!</string>
    <string name="reg_within_500">五百字以内</string>
    <string name="reg_BeGoodAt">您的擅长领域</string>
    <string name="reg_within_300">三百字以内</string>
    <string name="resume1">擅长领域啊giao!!!</string>

    <string name="forget_email">请输入邮箱账号</string>
    <string name="forget_code">请输入验证码</string>
    <string name="forget_pwd">请输入密码</string>
    <string name="forget_pwd_two">请输入确认密码</string>

    <string name="setPwd">请设置新密码</string>
    <string name="setPwdTwo">请再次确认密码</string>
    <string name="finish">完成</string>


</resources>
