<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:src="@mipmap/common_icon_back_black_n"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:id="@+id/regReturn"
        />
    <TextView
        android:textSize="14sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regis_resume"
        android:textColor="@color/colorGray"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:padding="10dp"
        android:background="@drawable/intro_bg"
        >
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            >
            <EditText
                android:id="@+id/regResume"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/colorGray"
                android:textSize="12sp"
                android:background="@null"
                android:hint="@string/resume"
                />
        </ScrollView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/colorText"
            android:text="@string/reg_within_500"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="11dp"
            android:id="@+id/text_intro_resume_num"
            />
    </RelativeLayout>
    <TextView
        android:textSize="14sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reg_BeGoodAt"
        android:textColor="@color/colorGray"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="30dp"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:padding="10dp"
        android:background="@drawable/intro_bg">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            >
            <EditText
                android:id="@+id/regField"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/colorGray"
                android:textSize="12sp"
                android:background="@null"
                android:hint="@string/resume1"
                />

        </ScrollView>

        <TextView
            android:id="@+id/text_intro_territory_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="11dp"
            android:text="@string/reg_within_300"
            android:textColor="@color/colorText"
            android:textSize="12sp" />
    </RelativeLayout>
    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        />
    <Button
        android:layout_width="300dp"
        android:layout_height="36dp"
        android:id="@+id/regThreeBut"
        android:text="@string/application_for_admission"
        android:background="@drawable/background_shape"
        android:layout_gravity="center"
        android:layout_marginBottom="40dp"
        android:textColor="@color/colorWhite"
        />

</LinearLayout>