<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/regis_perfect"
        android:textColor="@color/colorText"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/regis_onsuccess"
        android:textColor="@color/colorText"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/help_audit"
        android:textColor="@color/colorRed"
        android:textSize="10sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/regis_name"
        android:textColor="@color/colorGray"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/intro_bg">

        <EditText
            android:id="@+id/regName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:paddingLeft="7dp"
            android:textSize="12sp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/regis_hospital"
        android:textColor="@color/colorGray"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/intro_bg">

        <EditText
            android:id="@+id/regHospital"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:paddingLeft="7dp"
            android:textSize="12sp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/regis_department"
        android:textColor="@color/colorGray"
        android:textSize="14sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/intro_bg">

        <EditText
            android:id="@+id/regDepartment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:paddingLeft="7dp"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/popDepartment"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_margin="10dp"
            android:src="@mipmap/circle_icon_drop_down_n" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/regis_title"
        android:textColor="@color/colorGray"
        android:textSize="14sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/intro_bg">

        <EditText
            android:id="@+id/regTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:paddingLeft="7dp"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/popTitle"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_margin="10dp"
            android:src="@mipmap/circle_icon_drop_down_n" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/regTwoBut"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/background_shape"
            android:text="@string/next_step"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />
    </RelativeLayout>

</LinearLayout>