<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="74dp"
        android:text="@string/regis_perfect"
        android:textColor="@color/colorText"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/regis_onsuccess"
        android:textColor="@color/colorText"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="48dp"
        android:text="@string/regis_email"
        android:textColor="@color/colorGray"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/intro_bg"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/regEmail"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@null" />

        <Button
            android:id="@+id/regCodeBut"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@drawable/background_shape"
            android:text="@string/regis_get_code"
            android:textColor="@color/colorWhite"
            android:textSize="12sp" />
    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/regis_verification_code"
        android:textColor="@color/colorGray"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/intro_bg"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/regInputCode"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@null" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/regis_pwd"
        android:textColor="@color/colorGray"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/intro_bg"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/regPwd"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@null" />

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/regEye"
            android:layout_width="16dp"
            android:layout_height="10dp"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            android:background="@mipmap/login_icon_hide_password_n" />
    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/regis_repeat_pwd"
        android:textColor="@color/colorGray"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/intro_bg"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/regPwdTwo"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@null" />

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/regEyeTwo"
            android:layout_width="16dp"
            android:layout_height="10dp"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            android:background="@mipmap/login_icon_show_password" />
    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/regBut"
        android:layout_width="300dp"
        android:layout_height="36dp"
        android:layout_gravity="center"
        android:layout_marginBottom="40dp"
        android:background="@drawable/background_shape"
        android:text="@string/next_step"
        android:textColor="@color/colorWhite"
        android:textSize="16sp" />

</LinearLayout>